<resources>
    <string name="app_name">Tindergram</string>
    <string name="gender">Gender</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="privacy_header">Privacy</string>
    <string name="theme_header">Theme</string>
    <string name="language_header">Language</string>

    <!-- Messages Preferences -->
    <string name="password_change_title">Change your password</string>
    <string name="language_change_title">Change language to romanian</string>
    <string name="theme_color_title">Custom theme color</string>

    <string name="change_theme_title">Change theme</string>
    <string name="change_theme_off">To dark mode</string>
    <string name="change_theme_on">To light mode</string>

    <!-- Sync Preferences -->
    <string name="title_activity_post_location">PostLocationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_message_icon">send a message to the user</string>
    <string name="move_hint_text">Make your move...</string>


    <!-- errors -->
    <string name="wrong_emails">Please enter a valid email address</string>
    <string name="wrong_input">Wrong email or password</string>
    <string name="empty_input">Please fill all fields</string>
    <string name="user_already_exists">User with this email already exists</string>
    <string name="no_full_name">Please enter both first and last name</string>
    <string name="underage">You must be 18 or above to sign up</string>
    <string name="overage">You must be less than 100 years old sign up</string>
    <string name="wrong_mobile">Please enter a valid phone number</string>
    <string name="non_valid_input">Please enter a valid inputs</string>
    <string name="short_password">Your password must be at least 8 characters long</string>
    <string name="signOut">Sign Out</string>
    <string name="error_no_data">Please input some data</string>
    <string name="follow_txt">Follow</string>
    <string name="settings">User Settings</string>
    <string name="match">Its a Match!</string>
    <string name="following">Following</string>
    <string name="follow_back">Follow Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="deleted_post">Sorry, this post has been deleted</string>
    <string name="content_too_long">Content too long, please limit yourself to 140 characters</string>
    <string name="bio_too_long">Bio too long, please limit yourself to 140 characters</string>
    <string name="sexualPreference">Sexual Preference</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="fullName">Full Name</string>
    <string name="age">Age</string>
    <string name="bio">Bio</string>
    <string name="updateUser">Update User</string>
    <string name="appSettings">App Settings</string>
    <string name="gotIt">Got it</string>
    <string name="skip">Skip</string>
    <string name="male">Male</string>
    <string name="spaceChar">" "</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="gotoLoginErrorMsg">Error going to login activity with message</string>
    <string name="errorType">ERROR</string>
    <string name="imageType">image/*</string>
    <string name="selectImage">Select Image</string>
    <string name="data">data</string>
    <string name="emptyString" />
    <string name="romanian">ro</string>
    <string name="english">en</string>
    <string name="malePreference">Likes men</string>
    <string name="femalePreference">Likes women</string>
    <string name="bothPreference">Likes both</string>
    <string name="separator">" | "</string>
    <string name="tindergram">TINDERGRAM</string>
    <string name="newPost">New Post</string>
    <string name="addLocation">Add location</string>
    <string name="content">Content</string>
    <string name="uploadPhoto">Upload photo</string>
    <string name="save">save</string>
    <string name="changeDetails">Change your details</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createNewAccount">Create new Account</string>
    <string name="username">user_Name</string>
    <string name="location">Location</string>
    <string name="description">Description nxnxnxnnmmmmmmmmmmmmm</string>
    <string name="now">NOW</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="inputDescription">input description</string>
    <string name="searchUsers">search users....</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="sampleName">Ted Mosbey</string>
    <string name="sampleStatus">31  |  male  |  likes women</string>
    <string name="placeFiller">fggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfwfggfofbfbojfojbfw</string>
    <string name="welcomeText">Welcome to Tindergram!</string>
    <string name="editSecondary">You can go and edit your details before exploring the app</string>
    <string name="aboutUs">About us</string>
    <string name="explanationFirst">You can scroll through your feed to find possible dating matches</string>
    <string name="explanationSecond">By clicking the post, you can see a post\'s details, whether it\'s yours or not.</string>
    <string name="explanationThird">By clicking the user, you can see a users details and send him an SMS if he\'s a match for you...</string>
    <string name="explanationFourth">You can search users and create your own posts at anytime from the bottom bar.</string>
    <string name="txtAwesome">Awesome!</string>
    <string name="textSettings">You can now continue to edit your app settings</string>
    <string name="changeUserDetails">Change user details</string>
    <string name="media_upload_failed">Media upload failed</string>
    <string name="empty_content">Cannot assign empty content for content-only post</string>
    <string name="failed_signup">Failed to sign up</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="confirmChange">Confirm Change</string>
    <string name="empty_password">Enter password to update</string>
    <string name="updated_successfuly">Updated user successfuly</string>
    <string name="update_success">Updated user successfuly</string>
    <string name="maps_api_key">AIzaSyDr9boN1KwBHcaeXw9hlGtt_MSMp-d2yw4</string>
    <string name="no_users_found">No users found</string>
    <string name="send_msg">"You just sent a message to "</string>
    <string name="post_finish_upload">Posted!</string>
    <string name="changed_password">Password changed</string>
    <string name="post_deleted">Post deleted successfuly</string>


</resources>