<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings">

    <TextView
        android:id="@+id/settingsText_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/txtAwesome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/secondarySettingsText_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/textSettings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsText_tv" />

    <Button
        android:id="@+id/gotoSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_bg"
        android:text="@string/appSettings"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/fragSettings_prev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondarySettingsText_tv" />

    <ImageView
        android:id="@+id/fragSettings_next"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg"
        android:src="@drawable/ic_next_arrow"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fragSettings_prev"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg"
        android:src="@drawable/ic_prev_arrow"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skipBtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragSettings_next" />
</androidx.constraintlayout.widget.ConstraintLayout>