<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginText_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="124dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fragLogin_userName_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginText_tv" />

            <EditText
                android:id="@+id/fragLogin_password_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_userName_et" />

            <Spinner
                android:id="@+id/fragLogin_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:text="@string/gender"
                android:minHeight="48dp"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:spinnerMode="dropdown"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_phoneNumber" />

            <EditText
                android:id="@+id/fragLogin_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/phoneNumber"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_fullName" />

            <EditText
                android:id="@+id/fragLogin_fullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/fullName"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_password_et" />

            <EditText
                android:id="@+id/fragLogin_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="@string/age"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_gender" />

            <Button
                android:id="@+id/fragLogin_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:background="@drawable/input_bg"
                android:text="@string/createAccount"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragLogin_age" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>